Add zookeeper ui image.

--- a/springxd/Dockerfile
+++ b/springxd/Dockerfile
@@ -8,4 +8,4 @@ RUN unzip /spring-xd-1.0.0.M7-dist.zip
 RUN rm /spring-xd-1.0.0.M7-dist.zip
 
 ENV XD_HOME /spring-xd-1.0.0.M7/xd
-
+ENV JAVA_OPTS "-Dzk.embedded.server.port=5555"
